# open-govtech-report

./: .gitignore  main.py  pyproject.toml  repo_analyser.py  scrape_repos.py
